[package]
name = "pgn-traits"
version = "0.2.2"
authors = ["Morten Lohne <lohnemorten@gmail.com>"]
edition = "2018"
description = "Traits for chess variations that can be annotated with Portable Game Notation"
repository = "https://github.com/MortenLohne/pgn-traits"
readme = "README.md"
license = "MIT"

[dependencies]
board-game-traits = "0.2.0"